FullQa New/src/objects/Connector__c.object
<CustomObject>
    <fields>
        <fullName>FY_Actual_ASP__c</fullName>
        <formula>IF(FY_Actual_Dings__c &gt; 0, FY_Actual_Bookings__c /  FY_Actual_Dings__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY Actual ASP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY_Actual_Bookings__c</fullName>
        <label>FY Actual Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY_Actual_Dings__c</fullName>
        <label>FY Actual Dings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Featured__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A small number of Connectors are featured, for various reasons. Check only if you’re sure</inlineHelpText>
        <label>Featured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Growth_Category__c</fullName>
        <description>Growth-Strategic: this is for the connectors that are 10, 20+ deals but not as productive as our ANCHOR partners
Growth-Active: this is for the 1-10 deals producing partners
Growth-Emerging: this is for the non-producing partners the last 18-24 months but who have been active in the past
Growth-New: this is for new signed partner within the current year which BD transfers over to Pat as they are ignited partners (2 deals already, and engaged)
Growth-Revived: this is for partners BD RE-engaged and have done 2 deals and are engaged again.</description>
        <label>Growth Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Growth-Strategic</fullName>
                </value>
                <value>
                    <fullName>Growth-Active</fullName>
                </value>
                <value>
                    <fullName>Growth-Emerging</fullName>
                </value>
                <value>
                    <fullName>Growth-New</fullName>
                </value>
                <value>
                    <fullName>Growth-Revived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implementation_Team__c</fullName>
        <description>Used when assigning a new customer to a GoLive / Implementation Support team.  Closely, but not identically, aligned with the Sales Group.</description>
        <inlineHelpText>Used when assigning a new customer to a GoLive / Implementation Support team.  Closely, but not identically, aligned with the Sales Group.</inlineHelpText>
        <label>Implementation Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VSB</fullName>
                </value>
                <value>
                    <fullName>ECOMM</fullName>
                </value>
                <value>
                    <fullName>ERP</fullName>
                </value>
                <value>
                    <fullName>EMERGING ERP</fullName>
                </value>
                <value>
                    <fullName>SDK</fullName>
                </value>
                <value>
                    <fullName>CALC DASH</fullName>
                </value>
                <value>
                    <fullName>BIZ DEV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incubator_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incubator Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Category__c</fullName>
        <inlineHelpText>Most of our Integrations are accounting or ecommerce. Verify if you are unsure</inlineHelpText>
        <label>Integration Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Billing and Recurring Payments Solutions</fullName>
                </value>
                <value>
                    <fullName>CertCapture</fullName>
                </value>
                <value>
                    <fullName>CMS</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>ecommerce</fullName>
                </value>
                <value>
                    <fullName>Excise</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>Trustfile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration_Page__c</fullName>
        <label>Integration Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Integration_URL__c</fullName>
        <formula>&quot;https://avalara.com/integrations/&quot; &amp;  Slug__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Integration URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Video__c</fullName>
        <inlineHelpText>If this Connector has an internally produced video, by all means list it here</inlineHelpText>
        <label>Integration Video</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Kick_Off_Call_Date__c</fullName>
        <description>Purpose: Track the date of this kick off call specific to this connector
Integrated: No 
Change: Level 0 
Custodian: Business Development / Greg Chapman</description>
        <inlineHelpText>Enter the date the kick off call for this connector was completed</inlineHelpText>
        <label>Kick Off Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Name__c</fullName>
        <label>Legacy Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <inlineHelpText>This is a fully specified URL, returned after you submit a 600+ pixel wide image to logo.upload@avalara.com. Never a link to the outside world!</inlineHelpText>
        <label>Logo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Managed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Purpose: Track 30 day delta between old calc estimation and new calc estimation 
Integrated: No 
Change: Level 0 
Custodian: Business Development / Greg Chapman</description>
        <inlineHelpText>Associate the account currently managing / responsible for the code associated with this connector</inlineHelpText>
        <label>Managed By</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Connectors (Managed By)</relationshipLabel>
        <relationshipName>Managed_Connectors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketing_Business_Segment__c</fullName>
        <label>Marketing Business Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Ecommerce/SDK</fullName>
                </value>
                <value>
                    <fullName>EERP</fullName>
                </value>
                <value>
                    <fullName>ERP</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>VSB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Notes__c</fullName>
        <label>Marketing Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_SubType__c</fullName>
        <label>Marketing SubType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3dcart</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Ecomm - Other</fullName>
                </value>
                <value>
                    <fullName>EERP - Other</fullName>
                </value>
                <value>
                    <fullName>Epicor</fullName>
                </value>
                <value>
                    <fullName>Exact</fullName>
                </value>
                <value>
                    <fullName>Infor</fullName>
                </value>
                <value>
                    <fullName>Intacct</fullName>
                </value>
                <value>
                    <fullName>Magento</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>NetSuite</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PrestaShop</fullName>
                </value>
                <value>
                    <fullName>QuickBooks</fullName>
                </value>
                <value>
                    <fullName>Sage</fullName>
                </value>
                <value>
                    <fullName>Sage 50</fullName>
                </value>
                <value>
                    <fullName>SAP Business One</fullName>
                </value>
                <value>
                    <fullName>SDK</fullName>
                </value>
                <value>
                    <fullName>SYSPRO</fullName>
                </value>
                <value>
                    <fullName>TaxNOW</fullName>
                </value>
                <value>
                    <fullName>VirtueMart</fullName>
                </value>
                <value>
                    <fullName>VSB - Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketplace_Name__c</fullName>
        <inlineHelpText>This lets us simplify complex Connector Names, e.g. QuoteQuickly instead of QuoteQuickly 4.3 for Salesforce</inlineHelpText>
        <label>Marketplace Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>No_Closed_Won_Opps__c</fullName>
        <description>Using rollup helper to calculate number of opps that this connector has won.</description>
        <label>No. Closed Won Opps</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Certified_Versions__c</fullName>
        <description>Count of the number of versions with status = Certified</description>
        <label>No. of Certified Versions</label>
        <summaryFilterItems>
            <field>Version__c.Status__c</field>
            <operation>equals</operation>
            <value>Certified</value>
        </summaryFilterItems>
        <summaryForeignKey>Version__c.Connector__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Live_GoLives__c</fullName>
        <description>Using Rollup Helper to stamp the number of associated GoLives with either Calc, returns, or certs status = Live</description>
        <label>No. of Live GoLives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OEM_Strategic_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OEM Strategic Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Connectors7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PLT_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Purpose: Requested by Mark Wilhelm
Integrated: No 
Change: Level 1 
Custodian: Partner Launch Team/Mark Wilhelm

Ticket: https://jira.avalara.com/browse/SFCOM-7079</description>
        <inlineHelpText>Partner Launch Team Owner</inlineHelpText>
        <label>PLT Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Connectors2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POS_enabled_platform__c</fullName>
        <defaultValue>false</defaultValue>
        <label>POS enabled platform</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PPM_Manager__c</fullName>
        <formula>PPM__r.Manager.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PMM Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Purpose: Track PMM associated with this connector
Integrated: No 
Change: Level 0 
Custodian: Partner Management</description>
        <inlineHelpText>Enter the PMM associated with this connector</inlineHelpText>
        <label>PMM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Connectors1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PS_Base_Price__c</fullName>
        <label>PS Base Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PS_Required_Connector__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PS Required Connector</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PartnerLaunchSalesOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Ticket: https://jira.avalara.com/browse/ITBSE-822</description>
        <inlineHelpText>Partner Launch Sales Owner</inlineHelpText>
        <label>Partner Launch Sales Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Connectors9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Fee__c</fullName>
        <description>Used by the Partner Launch Team for Partner comments
Owner: Sara Simrell</description>
        <label>Partner Fee</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Management_Type__c</fullName>
        <formula>TEXT(Managed_By__r.Partner_Managemen__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Management Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Segment__c</fullName>
        <description>Used for Sales Opportunity segmentation and routing</description>
        <label>Partner Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Signed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Signed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Connectors8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Status_Summary__c</fullName>
        <formula>Managed_By__r.Partner_Status_Summary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Status Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Team_Grouping__c</fullName>
        <description>Used for Sales Opportunity Segmentation and Routing.</description>
        <label>Partner Team Grouping</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ecomm</fullName>
                </value>
                <value>
                    <fullName>Higher Ecomm</fullName>
                </value>
                <value>
                    <fullName>NetSuite</fullName>
                </value>
                <value>
                    <fullName>Mid-Market ERP</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>SMB ERP 2 Vertical/MLM</fullName>
                </value>
                <value>
                    <fullName>SMB ERP 1</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Business Solutions</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Non-Established</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Website_Link_back__c</fullName>
        <label>Partner Website Link back</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Pay_Recurring__c</fullName>
        <description>Purpose: Track recurring payment relationship per connector
Integrated: No
Change: Level 0
Custodian: Partner Management / Liz Anderson</description>
        <inlineHelpText>Use this field to identify recurring payment responsibility</inlineHelpText>
        <label>Pay Recurring?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Recurring</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Avalara</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PlatformCategoryInteger__c</fullName>
        <formula>IF(LEFT(TEXT( Platform_Cateogry__c ),5)=&quot;Level&quot;,VALUE(RIGHT(TEXT(Platform_Cateogry__c),1)),99)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Platform Category Integer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Platform_Cateogry__c</fullName>
        <description>Purpose: Track the platform category
Integrated: Yes (DW, Zuora) 
Change: Level 2 
Custodian: VP Sales</description>
        <inlineHelpText>The platform category assigned to the connector designating its pricing structure. A value in this field will make it available for quoting workflows.</inlineHelpText>
        <label>Platform Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Level 0</fullName>
                </value>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
                <value>
                    <fullName>Level 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Plain and simple — e.g. Epicor, Microsoft, WordPress</inlineHelpText>
        <label>Business Platform</label>
        <referenceTo>Platform__c</referenceTo>
        <relationshipLabel>Connectors</relationshipLabel>
        <relationshipName>Connectors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Press_Release__c</fullName>
        <label>Press Release</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Previous_PMM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to track previous PMM assigned to Connector.  Requested by Asher Matthew.  Not integrated.  Populated by workflow.</description>
        <inlineHelpText>The previous PMM assigned to Connector</inlineHelpText>
        <label>Previous PMM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Connectors6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_SAM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to track previous SAM assigned to Connector.  Requested by Asher Matthew.  Not integrated.  Populated by Workflow.</description>
        <inlineHelpText>The previous SAM assigned to Connector.</inlineHelpText>
        <label>Previous SAM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Connectors5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pricing_Schedule__c</fullName>
        <label>Pricing Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ERP1</fullName>
                </value>
                <value>
                    <fullName>ERP2</fullName>
                </value>
                <value>
                    <fullName>eComm</fullName>
                </value>
                <value>
                    <fullName>SDK</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>FastSigns</fullName>
                </value>
                <value>
                    <fullName>DataTrax</fullName>
                </value>
                <value>
                    <fullName>CERTCAPTURE</fullName>
                </value>
                <value>
                    <fullName>PROSTORES</fullName>
                </value>
                <value>
                    <fullName>CUSTOM</fullName>
                </value>
                <value>
                    <fullName>Powerchord</fullName>
                </value>
                <value>
                    <fullName>Unassisted</fullName>
                </value>
                <value>
                    <fullName>ZT</fullName>
                </value>
                <value>
                    <fullName>Non Connector Fees</fullName>
                </value>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>AvaTax SoHo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Business_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Business Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Connectors (Primary Business Contact)</relationshipLabel>
        <relationshipName>Connectors1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Marketing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Marketing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Connectors</relationshipLabel>
        <relationshipName>Connectors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Sales_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A field to track primary sales contract associated with Partner/Connector.  Requested by Robin Conner. Not integrated.</description>
        <inlineHelpText>Primary sales contract associated with Partner/Connector</inlineHelpText>
        <label>Primary Sales Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Connectors (Primary Sales Contact)</relationshipLabel>
        <relationshipName>Connectors3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Technical_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Technical Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Connectors (Primary Technical Contact)</relationshipLabel>
        <relationshipName>Connectors2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <description>The product related to the Connector.</description>
        <label>Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Avalara AvaTax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Projected_Connector_Completion__c</fullName>
        <description>Purpose: Track the project completion date of this connector
Integrated: No 
Change: Level 0 
Custodian: Business Development / Greg Chapman</description>
        <inlineHelpText>Enter the projected completion date of this connector</inlineHelpText>
        <label>Projected Connector Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProvisionEnvironmentOverride__c</fullName>
        <label>ProvisionEnvironmentOverride</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BOTH</fullName>
                </value>
                <value>
                    <fullName>PRODUCTION</fullName>
                </value>
                <value>
                    <fullName>SDK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Publish__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the flag telling the Pub-Synch system that avalara.com should include this integration.This field is read only to everyone and only editable by system admins or if the permission set has been assigned to an individual user. Permission set = &quot;Connector Publish Checkbox&quot;</description>
        <inlineHelpText>This is the flag telling the Pub-Synch system that avalara.com should include this integration</inlineHelpText>
        <label>Publish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReadyForPROS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready For PROS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requires_Avalara_Professional_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Avalara Professional Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Returns_Velocity2__c</fullName>
        <label>Returns Velocity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Routing_Partner_Group__c</fullName>
        <label>Partner Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abas</fullName>
                </value>
                <value>
                    <fullName>Acumatica</fullName>
                </value>
                <value>
                    <fullName>Agility</fullName>
                </value>
                <value>
                    <fullName>Americommerce</fullName>
                </value>
                <value>
                    <fullName>Aptos</fullName>
                </value>
                <value>
                    <fullName>Aria</fullName>
                </value>
                <value>
                    <fullName>Broadleaf Commerce</fullName>
                </value>
                <value>
                    <fullName>Chempax</fullName>
                </value>
                <value>
                    <fullName>ConnectWise</fullName>
                </value>
                <value>
                    <fullName>CorrigoNet</fullName>
                </value>
                <value>
                    <fullName>DATATRAX by InfoTrax</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>eAutomate</fullName>
                </value>
                <value>
                    <fullName>ECi</fullName>
                </value>
                <value>
                    <fullName>ECI - eAutomate</fullName>
                </value>
                <value>
                    <fullName>Enterprise Distributors Business System</fullName>
                </value>
                <value>
                    <fullName>Epicor</fullName>
                </value>
                <value>
                    <fullName>Exact</fullName>
                </value>
                <value>
                    <fullName>FIRESTORM by Trinity</fullName>
                </value>
                <value>
                    <fullName>GlobalEdge</fullName>
                </value>
                <value>
                    <fullName>GreyStar Solutions (Unity)</fullName>
                </value>
                <value>
                    <fullName>IBM Corporation</fullName>
                </value>
                <value>
                    <fullName>Infor</fullName>
                </value>
                <value>
                    <fullName>Intacct</fullName>
                </value>
                <value>
                    <fullName>IQMS</fullName>
                </value>
                <value>
                    <fullName>Kentico</fullName>
                </value>
                <value>
                    <fullName>Kerridge Commerical Systems</fullName>
                </value>
                <value>
                    <fullName>Magento</fullName>
                </value>
                <value>
                    <fullName>MarketPower PRO</fullName>
                </value>
                <value>
                    <fullName>marketvision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAM_Manager__c</fullName>
        <formula>SAM__r.Manager.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAM Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAM_Welcome_Call_Scheduled__c</fullName>
        <label>SAM Welcome Call Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Purpose: Track SAM associated with this connector
Integrated: No 
Change: Level 0 
Custodian: Partner Management</description>
        <inlineHelpText>Enter the SAM associated with this connector</inlineHelpText>
        <label>SAM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Connectors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SEO_SEM_Keywords_Sent__c</fullName>
        <description>Field deprecated on 11/15/16 at the request of Robin Conner.</description>
        <label>(DEPRECATED) SEO/SEM Keywords Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SEO_SEM_Keywords__c</fullName>
        <label>(DEPRECATED) SEO/SEM Keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Actual_Dings__c</fullName>
        <label>2014 Actual Dings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Available_Connector__c</fullName>
        <formula>IF(ISBLANK(TEXT(Pricing_Schedule__c)) , 0 , 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Available Connector</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Available__c</fullName>
        <label>Sales Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Budget_Bookings__c</fullName>
        <formula>ASP_Budget__c *  Sales_Director_Ding_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Budget Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>